Server up and running...

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -5,6 +5,7 @@
     <script src="../scripts/index.js" charset="utf-8"></script>
     <title></title>
   </head>
+  <h1>This is a Header</h1>
   <body>
 
   </body>
