added css file, html formatting

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -2,10 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../styles/versace.css" media="screen" title="no title">
     <script src="../scripts/index.js" charset="utf-8"></script>
     <title></title>
   </head>
-  <h1>This is a Header</h1>
+  <h1>Your Server Works</h1>
+  <div id = "queryArea">
+    <button id = "queryButton">Show Me Something</button>
   <body>
 
   </body>
