--- a/public/views/index.html
+++ b/public/views/index.html
@@ -8,7 +8,9 @@
   </head>
   <h1>Your Server Works</h1>
   <div id = "queryArea">
+    <div id = "buttonArea">
     <button id = "queryButton">Show Me Something</button>
+  </div>
   <body>
 
   </body>
