--- a/public/views/index.html
+++ b/public/views/index.html
@@ -6,7 +6,9 @@
     <script src="../scripts/index.js" charset="utf-8"></script>
     <title></title>
   </head>
+  <div id = "headerArea">
   <h1>Your Server Works</h1>
+</div>
   <div id = "queryArea">
     <div id = "buttonArea">
     <button id = "queryButton">Show Me Something</button>
