--- a/public/views/index.html
+++ b/public/views/index.html
@@ -3,17 +3,48 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../styles/versace.css" media="screen" title="no title">
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <script src="../scripts/index.js" charset="utf-8"></script>
     <title></title>
   </head>
+    <body>
   <div id = "headerArea">
   <h1>Your Server Works</h1>
 </div>
   <div id = "queryArea">
     <div id = "buttonArea">
-    <button id = "queryButton">Show Me Something</button>
+    <button id = "queryButton" class = "a">Show Me Something</button>
+    <button id = "queryButton" class = "b">Show Me Something Else</button>
+    <button id = "queryButton" class = "c">Even More...</button>
   </div>
-  <body>
+  <div id = "secondArea">
+    <h3 class = "aitchThree">Within this area, we have some text</h3>
+    <p class = "p">Lucas ipsum dolor sit amet nal moore calamari luuke chewbacca jamillia whaladon paploo kenobi sneevel.
+      Mon senesca kamino padmé vurk kendal tsavong. Jubnuk moff moff caamasi gorith grodin trioculus.
+      Endocott kushiban irek ors ryn r4-p17 quelli yevetha kathol. Whiphid wookiee shaak mon clawdite boz sabé.
+      Typho bimm hutt dexter. Dormé himoran ongree dantari fosh paploo typho r5-d4 yuvernian.
+      Shimrra antonio tof bardan isolder chiss solo. Olié lahara altyr yoda natasi han gricho fey'lya.</p>
+      <p class = "p">Bib melodie auril var tharen mantell saesee.
+Nal cade taung terrik rugor. Kamino sing vader hssis. Wharl gorax falleen frozian sio.
+Elom ors dantooine paaerduag chewbacca doldur vodran. Maul fel galen conan dressellian opress ithorian.
+Ozzel epicanthix qui-gonn shistavanen yaka dak jusik. X2 boltrunians mothma dug. Jerec pau'an cerean bib hssis saffa.
+Zam skywalker fode boss auril kast. Hutta lorth kamino tchuukthai tchuukthai twi'lek antilles firmus.</p>
+<p class = "p">Medon dantooine motti tharin greedo padmé thrawn. R4-p17 shistavanen greeata darth.
+Anx zannah argazdan besalisk calrissian nal ord tarasin.
+Haruun amedda qu darpa darth. Lowbacca vos bail darth. Mara wicket sullustan mas sio vor arcona.
+Bel gricho latter kaminoan darth pellaeon danni moff.</p>
+<p class = "p">Rakata ahsoka jax ebe. Ansionian rugor myneyrsh mustafar thrackan malastare organa kendal.
+Aruzan utapau cade kenobi muzzer vong. Skywalker lah quarren ablajeck gand irek grizmallt myneyrsh.
+Kamino vor hypori ansion thul sulorine zhell. Ferroans rancisis saffa teneniel chirrpa juvex.
+T'landa jerec stele vodran owen nosaurian sluis. Bormea olié ithorian jarael kor-uj dulok sing shado.
+Naberrie porkins cracken argazdan yaka selonian ansuroer. Adi veila teneniel kor-uj evazan taun.</p>
+<p class = "p">Hutta adi thisspias cadavine tambor porkins. Even obi-wan felucia breha. Skywalker even darth piett.
+Beru pellaeon piett kal darth bando elom haako bajic. Logray carnor sullustan carondian vaathkree subterrel.
+Artaru celegian hallotan mothma antemeridian. Verpine saleucami anzati alderaan. Bardan tyranus gunray aqualish.
+Er'kit arkanis derlin gordin bren su skywalker zannah xizor. Droopy tahiri mace gossam xappyh daala.</p>
+  </div>
+  </div>
+
 
   </body>
 </html>
