More experimentation with CSS

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -18,7 +18,8 @@
     <button id = "queryButton" class = "c">Even More...</button>
   </div>
   <div id = "secondArea">
-    <h3 class = "aitchThree">Within this area, we have some text</h3>
+    <div id = "textBackground">
+    <h2 class = "aitchThree">Within this area, we have some text...</h2>
     <p class = "p">Lucas ipsum dolor sit amet nal moore calamari luuke chewbacca jamillia whaladon paploo kenobi sneevel.
       Mon senesca kamino padmé vurk kendal tsavong. Jubnuk moff moff caamasi gorith grodin trioculus.
       Endocott kushiban irek ors ryn r4-p17 quelli yevetha kathol. Whiphid wookiee shaak mon clawdite boz sabé.
@@ -41,7 +42,8 @@ Naberrie porkins cracken argazdan yaka selonian ansuroer. Adi veila teneniel kor
 <p class = "p">Hutta adi thisspias cadavine tambor porkins. Even obi-wan felucia breha. Skywalker even darth piett.
 Beru pellaeon piett kal darth bando elom haako bajic. Logray carnor sullustan carondian vaathkree subterrel.
 Artaru celegian hallotan mothma antemeridian. Verpine saleucami anzati alderaan. Bardan tyranus gunray aqualish.
-Er'kit arkanis derlin gordin bren su skywalker zannah xizor. Droopy tahiri mace gossam xappyh daala.</p>
+Er'kit arkanis derlin gordin bren su skywalker zannah xizor. Droopy tahiri mace gossam xappyh daala...</p>
+</div>
   </div>
   </div>
 
