--- a/public/styles/versace.css
+++ b/public/styles/versace.css
@@ -28,7 +28,7 @@ body {
   padding-bottom: 25%;
   margin-top: 10%;
   margin-left: 10%;
-  margin-right: 10%
+  margin-right: 10%;
 }
 
 #headerArea {
@@ -51,7 +51,7 @@ body {
 
 h1 {
   font-family: Oswald, lucida, sans-serif;
-  margin-left: 30%;;
+  margin-left: 32%;;
 }
 
 #queryButton {
@@ -87,18 +87,27 @@ h1 {
   padding-left: 40%
   padding-top: 25%;
   padding-bottom: 25%;
-  margin-top: 10%;
+  margin-top: 5%;
   margin-left: 10%;
   margin-right: 10%
+}
+
+#textBackground {
+  background-image: url( "../images/Space-image.jpg" );
+  background-color: black;
+  margin-left: 5%;
+  margin-right: 5%;
+  border-radius: 25px;
+  padding-bottom: 1%;
 }
 
 .p {
   margin-left: 2%;
   margin-right: 2%;
-  color: black;
+  color: yellow;
 }
 
 .aitchThree {
-  color: black;
-  margin-left: 20%;
+  color: #0044BB;
+  margin-left: 15%;
 }
