--- a/public/views/index.html
+++ b/public/views/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="../styles/versace.css" media="screen" title="no title">
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <script src="../vendors/angular.min.js" charset="utf-8"></script>
     <script src="../scripts/index.js" charset="utf-8"></script>
-    <title></title>
+    <title>Refresher Project</title>
   </head>
     <body>
   <div id = "headerArea">
